@@ -1,6 +1,8 @@
           CHANGES IN SOUNDGEN VERSION 1.6.0.9000 [---date---]
 BUGS FIXED:
-  * soundgen(): stochastic formants were not added to breathing noise unless VTL was specified
+  * soundgen(): stochastic formants properly added to breathing noise even without specifying VTL (bug introduced in v1.6.0)
+
+MINOR:
   * soundgen(): noise component is time-locked to voiced component if noise is numeric rather than a list (ie precisely the same timing)
 
 
